--- a/Lab/Lab part 2 (2.4 - Välja modell).ipynb
+++ b/Lab/Lab part 2 (2.4 - Välja modell).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,16 @@
     "import seaborn as sns\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "\n",
-    "sns.set_theme()"
+    "sns.set_theme()\n",
+    "\n",
+    "from lab2 import Helper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -266,6 +268,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop id as its not useful\n",
+    "df1 = df1.drop('id', axis=1)\n",
+    "df2 = df2.drop('id', axis=1)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -294,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +331,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
        "      <th>age</th>\n",
        "      <th>cholesterol</th>\n",
        "      <th>gluc</th>\n",
@@ -339,7 +351,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>18393</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -361,8 +372,8 @@
        "</div>"
       ],
       "text/plain": [
-       "   id    age  cholesterol  gluc  smoke  alco  active  gender_2  \\\n",
-       "0   0  18393            1     1      0     0       1         1   \n",
+       "     age  cholesterol  gluc  smoke  alco  active  gender_2  \\\n",
+       "0  18393            1     1      0     0       1         1   \n",
        "\n",
        "   bmi-feature_obese (class I)  bmi-feature_obese (class II)  \\\n",
        "0                            0                             0   \n",
@@ -375,16 +386,6 @@
        "\n",
        "   bp-feature_stage 2 hypertension  \n",
        "0                                0  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0    0\n",
-       "Name: cardio, dtype: int64"
       ]
      },
      "metadata": {},
@@ -411,7 +412,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
        "      <th>age</th>\n",
        "      <th>bmi</th>\n",
        "      <th>ap_hi</th>\n",
@@ -427,7 +427,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>18393</td>\n",
        "      <td>21</td>\n",
        "      <td>110</td>\n",
@@ -444,21 +443,8 @@
        "</div>"
       ],
       "text/plain": [
-       "   id    age  bmi  ap_hi  ap_lo  cholesterol  gluc  smoke  alco  active  \\\n",
-       "0   0  18393   21    110     80            1     1      0     0       1   \n",
-       "\n",
-       "   gender_2  \n",
-       "0         1  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0    0\n",
-       "Name: cardio, dtype: int64"
+       "     age  bmi  ap_hi  ap_lo  cholesterol  gluc  smoke  alco  active  gender_2\n",
+       "0  18393   21    110     80            1     1      0     0       1         1"
       ]
      },
      "metadata": {},
@@ -471,21 +457,19 @@
     "\n",
     "display(\n",
     "    df1_x.head(1),\n",
-    "    df1_y.head(1),\n",
-    "    df2_x.head(1),\n",
-    "    df2_y.head(1)\n",
+    "    df2_x.head(1)\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((40918, 16), (40918,), (13640, 16), (13640,), (13640, 16), (13640,))"
+       "((40918, 15), (40918,), (13640, 15), (13640,), (13640, 15), (13640,))"
       ]
      },
      "metadata": {},
@@ -494,7 +478,7 @@
     {
      "data": {
       "text/plain": [
-       "((40918, 11), (40918,), (13640, 11), (13640,), (13640, 11), (13640,))"
+       "((40918, 10), (40918,), (13640, 10), (13640,), (13640, 10), (13640,))"
       ]
      },
      "metadata": {},
@@ -502,8 +486,6 @@
     }
    ],
    "source": [
-    "from lab2 import Helper\n",
-    "\n",
     "df1_x_train, df1_x_val, df1_x_test, df1_y_train, df1_y_val, df1_y_test = Helper.train_val_test_split(df1_x, df1_y, split_size=0.2, rand_state=42)\n",
     "df2_x_train, df2_x_val, df2_x_test, df2_y_train, df2_y_val, df2_y_test = Helper.train_val_test_split(df2_x, df2_y, split_size=0.2, rand_state=42)\n",
     "\n",
@@ -511,6 +493,78 @@
     "    (df1_x_train.shape, df1_y_train.shape, df1_x_val.shape, df1_y_val.shape, df1_x_test.shape, df1_y_test.shape),\n",
     "    (df2_x_train.shape, df2_y_train.shape, df2_x_val.shape, df2_y_val.shape, df2_x_test.shape, df2_y_test.shape),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.24469073517266024,\n",
+       " 0.4111901139656925,\n",
+       " 0.24653791612942894,\n",
+       " 0.4122246262036306)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1_x_train, df1_x_val = Helper.scaler('minmax', df1_x_train, df1_x_val)\n",
+    "df1_x_train.mean(), df1_x_train.std(), df1_x_val.mean(), df1_x_val.std()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### logistic regression test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hyperparamters\n",
+    "# max_iter\n",
+    "# n_jobs\n",
+    "# l1_ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-2.06760173]),\n",
+       " array([[ 2.0220628 ,  1.11680694, -0.29950777, -0.17656844, -0.18686438,\n",
+       "         -0.21877651,  0.067584  ,  0.30837472,  0.49343105,  0.57886229,\n",
+       "          0.17680364, -0.43737391,  2.09333346,  0.40257396,  1.86549835]]))"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model = LogisticRegression(penalty = None)\n",
+    "model.fit(df1_x_train,  df1_y_train) # estimated beta parameters\n",
+    "model.intercept_, model.coef_,\n",
+    "\n"
    ]
   }
  ],
