--- a/Lab/Lab part 2 (2.4 - Välja modell).ipynb
+++ b/Lab/Lab part 2 (2.4 - Välja modell).ipynb
@@ -625,7 +625,10 @@
     "        - Reason:\n",
     "    \n",
     "    - criterion ['gini', 'entropy', 'log_loss']\n",
-    "    - max_features: [None, 'sqrt', 'log2']\n"
+    "    - max_features: [None, 'sqrt', 'log2']\n",
+    "    \n",
+    "    - max_samples: [None, 0.1, 0.2, ... 1.0] # would this actually work?\n",
+    "        - Reason:"
    ]
   },
   {
