--- a/Lab/Lab part 2 (2.4 - Välja modell).ipynb
+++ b/Lab/Lab part 2 (2.4 - Välja modell).ipynb
@@ -483,6 +483,8 @@
     }
    ],
    "source": [
+    "# split data into a train val test split.\n",
+    "\n",
     "df1_x_train, df1_x_val, df1_x_test, df1_y_train, df1_y_val, df1_y_test = Helper.train_val_test_split(df1_x, df1_y, split_size=0.2, rand_state=42)\n",
     "df2_x_train, df2_x_val, df2_x_test, df2_y_train, df2_y_val, df2_y_test = Helper.train_val_test_split(df2_x, df2_y, split_size=0.2, rand_state=42)\n",
     "\n",
@@ -493,27 +495,163 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.24469073517266024,\n",
-       " 0.4111901139656925,\n",
-       " 0.24653791612942894,\n",
-       " 0.4122246262036306)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df1_x_train, df1_x_val = Helper.scaler('minmax', df1_x_train, df1_x_val)\n",
-    "df1_x_train.mean(), df1_x_train.std(), df1_x_val.mean(), df1_x_val.std()"
+    "##### Before we continue, i'd like to go over why we even scale the data and do hyperparameter tuning in the first place. There are several reasons for why you'd like to scale the data. In the case of normalization, we'd like to make sure that the weight/importance thats put on various metrics is proprtionally correct. We do this by transforming the data to only contain values between 0 and 1. Standardization on the other hand is useful when the data you've got is known to follow a standard distrubution. Standardization thus involves transforming the data into a standard normal distribution.<br><br>Hyperparameter tuning is a different beast all togeather. Here we tune the various parameters that a model has to offer. Things like the maximum number of interations before the model converges, or the maximum depth of a tree given by the decision tree classifier.<br> Now than, lets continue."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### All parameters and corresponding explanations as to why i made the choices i made.\n",
+    "###### NOTE: Obvious choices lack a reason\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Grid Search parameters\n",
+    "- Scoring: 'Accuracy'\n",
+    "    - Reason: Given that where using classification based models, accuracy seems like the only appropriate metric, given it directly tells us how good the model's doing at actually classifying things correctly.\n",
+    "- cv: 5\n",
+    "    - Reason: After some online research, it seems as though 5 is a generally good number of folds for avoiding things like overfitting.\n",
+    "\n",
+    "#### LogisticRegression\n",
+    "- Chosen parameters\n",
+    "    - penalty: 'elasticnet'\n",
+    "        - Reason: We'd like to use both L1 and or L2 regularization in the grid search.\n",
+    "    \n",
+    "    - solver: saga\n",
+    "\n",
+    "    - max_iter: 1000\n",
+    "        - Reason: Some models require quite a few iterations before they converge. Given that max_iter only specifies the maximum number of allowed iterations before \"giving up\" on a model converging, we won't actually be wasting any compute power on running a more iterations than will be needed.\n",
+    "\n",
+    "- Hyperparameters\n",
+    "\n",
+    "    - l1_ratio: [0.0, 0.05, ... 1.0]\n",
+    "        - Reason: Uses both solvers independently as well as in ratios with an increment resolution of 5%. This simply just seems like a resonable thing to do.\n",
+    "    \n",
+    "#### DecisionTreeClassifier\n",
+    "- Chosen parameters\n",
+    "    - max_depth: None (Default)\n",
+    "        - Reason: Not needed as we'd like expand the nodes until all leaves are pure.\n",
+    "\n",
+    "    - min_samples_split: 2 (Default)\n",
+    "        - Reason: We'd like to only split if we've got 2 samples or more \n",
+    "\n",
+    "    - min_samples_leaf: 1 (Default)\n",
+    "        - Reason: We'd like our leaf nodes to only contain one sample\n",
+    "\n",
+    "    - min_weight_fraction_leaf: 0 (Default)\n",
+    "        - Reason: We'd like to keep building the tree regardless of \"amount of data\" (so to say) available.\n",
+    "\n",
+    "    - max_leaf_nodes: None (Default)\n",
+    "        - Reason: Generally not needed, as we'd simply like to build the tree until we've got pure leaves, not obsess about impurity decrease.\n",
+    "\n",
+    "    - min_impurity_decrease: 0 (Default)\n",
+    "        - Reason: We'd like to keep splitting even if the impurity decrease is low. I dont think this will result in overfitting.\n",
+    "\n",
+    "    - class_weight: None (Default)\n",
+    "        - Reason: We've got no clue about the importance of our classes.\n",
+    "\n",
+    "    - ccp_alpha: 0 (Default)\n",
+    "        - Reason: Don't think we need this, as it won't meaningfully decrease the complexity of the tree.\n",
+    "\n",
+    "- Hyperparameters\n",
+    "    - criterion ['gini', 'entropy', 'log_loss']\n",
+    "    - splitter ['best', 'random']\n",
+    "    - max_features: [None, 'sqrt', 'log2']\n",
+    "\n",
+    "\n",
+    "#### RandomForestClassifier\n",
+    "###### Note: Matching 'Chosen parameters' from above have been omitted, given the models both rely on decision trees. This is purely for aesthetics.\n",
+    "- Chosen parameters\n",
+    "\n",
+    "    - bootstrap: True (Default)\n",
+    "        - Reason: Part of what sets random forest and decision tree apart. So it'd be dumb to not use it.\n",
+    "        \n",
+    "    - oob_score: False (Default)\n",
+    "        - Reason: Part of what sets random forest and decision tree apart. So it'd be dumb to not use it.\n",
+    "\n",
+    "- Hyperparameters\n",
+    "    - n_estimators: [10, 20, ... 100]\n",
+    "        - Reason: Seemed like a resonable range. Random forest doesn't \"slow down\" unlike some other algorithms, and eventually stabalizes, meaning you you won't gain anything by adding more trees. Our dataset also isnt particularly large or complex.\n",
+    "    \n",
+    "    - criterion ['gini', 'entropy', 'log_loss']\n",
+    "    - max_features: [None, 'sqrt', 'log2']\n",
+    "    \n",
+    "    - max_samples: [None, 0.1, 0.2, ... 1.0] # would this actually work?\n",
+    "        - Reason: We'll try all ratios, see what works best. Simple as that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All the data needed for choosing the right model and doing hyperparameter tuning via GridSearchCV\n",
+    "\n",
+    "datasets = {\n",
+    "    'df1': {\n",
+    "        'x_train': df1_x_train,\n",
+    "        'x_val': df1_x_val,\n",
+    "        'x_test': df1_x_test,\n",
+    "        'y_train': df1_y_train,\n",
+    "        'y_val': df1_y_val,\n",
+    "        'y_test': df1_y_test\n",
+    "    },\n",
+    "    \n",
+    "    'df2': {\n",
+    "        'x_train': df2_x_train,\n",
+    "        'x_val': df2_x_val,\n",
+    "        'x_test': df2_x_test,\n",
+    "        'y_train': df2_y_train,\n",
+    "        'y_val': df2_y_val,\n",
+    "        'y_val': df2_y_test\n",
+    "     }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "model_data = {\n",
+    "    'LogisticRegression': {\n",
+    "        'model': LogisticRegression(),\n",
+    "        'search space': {\n",
+    "            # Chosen parameters (defaults excluded)\n",
+    "            'penalty': ['elasticnet'],\n",
+    "            'solver': ['saga'],\n",
+    "            'max_iter': [1000],\n",
+    "            \n",
+    "            # Hyperparamaters\n",
+    "            'l1_ratio' : [round(x / 20, 2) for x in range(21)]\n",
+    "        }\n",
+    "    },\n",
+    "    \n",
+    "    'DecisionTreeClassifier': {\n",
+    "        'model': DecisionTreeClassifier(),\n",
+    "        'search space': {\n",
+    "            \n",
+    "            # Hyperparamaters\n",
+    "            'criterion': ['gini', 'entropy', 'log_loss'],\n",
+    "            'splitter': ['best', 'random'],\n",
+    "            'max_features' : [None, 'sqrt', 'log2'],\n",
+    "        }\n",
+    "    },\n",
+    "    \n",
+    "    'RandomForestClassifier': {\n",
+    "        'model': RandomForestClassifier(),\n",
+    "        'search space': {\n",
+    "            \n",
+    "            # Hyperparamaters\n",
+    "            'n_estimators': [x for x in range(10, 110, 10)],\n",
+    "            \n",
+    "            'criterion': ['gini', 'entropy', 'log_loss'],\n",
+    "            'max_features' : [None, 'sqrt', 'log2']\n",
+    "        }\n",
+    "    },\n",
+    "}"
    ]
   },
   {
@@ -575,151 +713,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### All paraters and explanations as to why i made the choices i made.\n",
-    "###### NOTE: Obvious choices lack a \"Reason\" field.\n",
+    "##### The below code roughly follows this control flow.\n",
     "\n",
-    "\n",
-    "\n",
-    "#### Grid Search parameters\n",
-    "- Scoring: 'Accuracy'\n",
-    "    - Reason: Given that where using classification based models, accuracy seems like the only appropriate metric, given it directly tells us how good the model's doing at actually classifying things correctly.\n",
-    "- cv: 5\n",
-    "    - Reason: After some online research, it seems as though 5 is a generally good number of folds for avoiding things like overfitting.\n",
-    "\n",
-    "#### LogisticRegression\n",
-    "- Chosen parameters\n",
-    "    - penalty: 'elasticnet'\n",
-    "        - Reason: We'd like to use both L1 and or L2 regularization in the grid search.\n",
-    "    \n",
-    "    - solver: saga\n",
-    "\n",
-    "    - max_iter: 1000\n",
-    "        - Reason: Some models require quite a few iterations before they converge. Given that max_iter only specifies the maximum number of allowed iterations before \"giving up\" on a model converging, we won't actually be wasting any compute power on running a more iterations than will be needed.\n",
-    "\n",
-    "- Hyperparameters\n",
-    "\n",
-    "    - l1_ratio: [0.0, 0.1, ... 1.0]\n",
-    "        - Reason: Uses both solvers independently as well as in ratios with an increment resolution of 10%. This simply just seems like a resonable thing to do.\n",
-    "    \n",
-    "#### DecisionTreeClassifier\n",
-    "- Chosen parameters\n",
-    "    - max_depth: None (Default)\n",
-    "        - Reason: Not needed as we'd like expand the nodes until all leaves are pure.\n",
-    "\n",
-    "    - min_samples_split: 2 (Default)\n",
-    "        - Reason: We'd like to only split if we've got 2 samples or more \n",
-    "\n",
-    "    - min_samples_leaf: 1 (Default)\n",
-    "        - Reason: We'd like our leaf nodes to only contain one sample\n",
-    "\n",
-    "    - min_weight_fraction_leaf: 0 (Default)\n",
-    "        - Reason: We'd like to keep building the tree regardless of \"amount of data\" (so to say) available.\n",
-    "\n",
-    "    - max_leaf_nodes: None (Default)\n",
-    "        - Reason: Generally not needed, as we'd simply like to build the tree until we've got pure leaves, not obsess about impurity decrease.\n",
-    "\n",
-    "    - min_impurity_decrease: 0 (Default)\n",
-    "        - Reason: We'd like to keep splitting even if the impurity decrease is low. I dont think this will result in overfitting.\n",
-    "\n",
-    "    - class_weight: None (Default)\n",
-    "        - Reason: We've got no clue about the importance of our classes.\n",
-    "\n",
-    "    - ccp_alpha: 0 (Default)\n",
-    "        - Reason: Don't think we need this, as it won't meaningfully decrease the complexity of the tree.\n",
-    "\n",
-    "- Hyperparameters\n",
-    "    - criterion ['gini', 'entropy', 'log_loss']\n",
-    "    - splitter ['best', 'random']\n",
-    "    - max_features: [None, 'sqrt', 'log2']\n",
-    "\n",
-    "\n",
-    "#### RandomForestClassifier\n",
-    "###### Note: Matching 'Chosen parameters' from above have been omitted, given the models both rely on decision trees. This is purely for aesthetics.\n",
-    "- Chosen parameters\n",
-    "\n",
-    "    - bootstrap: True (Default)\n",
-    "        - Reason: Part of what sets random forest and decision tree apart. So it'd be dumb to not use it.\n",
-    "        \n",
-    "    - oob_score: False (Default)\n",
-    "        - Reason: Part of what sets random forest and decision tree apart. So it'd be dumb to not use it.\n",
-    "\n",
-    "- Hyperparameters\n",
-    "    - n_estimators: [10, 20, ... 100]\n",
-    "        - Reason: Seemed like a resonable range. Random forest doesn't \"slow down\" unlike some other algorithms, and eventually stabalizes, meaning you you won't gain anything by adding more trees. Our dataset also isnt particularly large or complex.\n",
-    "    \n",
-    "    - criterion ['gini', 'entropy', 'log_loss']\n",
-    "    - max_features: [None, 'sqrt', 'log2']\n",
-    "    \n",
-    "    - max_samples: [None, 0.1, 0.2, ... 1.0] # would this actually work?\n",
-    "        - Reason: We'll try all ratios, see what works best. Simple as that."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# All the data needed for chosing the right model and doing hyperparameter tuning via GridSearchCV\n",
-    "\n",
-    "datasets = {\n",
-    "    'df1': {\n",
-    "        'x_train': df1_x_train,\n",
-    "        'x_val': df1_x_val,\n",
-    "        'x_test': df1_x_test,\n",
-    "        'y_train': df1_y_train,\n",
-    "        'y_val': df1_y_val,\n",
-    "        'y_test': df1_y_test\n",
-    "    },\n",
-    "    \n",
-    "    'df2': {\n",
-    "        'x_train': df2_x_train,\n",
-    "        'x_val': df2_x_val,\n",
-    "        'x_test': df2_x_test,\n",
-    "        'y_train': df2_y_train,\n",
-    "        'y_val': df2_y_val,\n",
-    "        'y_val': df2_y_test\n",
-    "     }\n",
-    "}\n",
-    "\n",
-    "\n",
-    "model_data = {\n",
-    "    'LogisticRegression': {\n",
-    "        'model': LogisticRegression(),\n",
-    "        'search space': {\n",
-    "            # Chosen parameters (defaults excluded)\n",
-    "            'penalty': ['elasticnet'],\n",
-    "            'solver': ['saga'],\n",
-    "            'max_iter': [1000],\n",
-    "            \n",
-    "            # Hyperparamaters\n",
-    "            'l1_ratio' : [round(x * 0.1, 1) for x in range(11)]\n",
-    "        }\n",
-    "    },\n",
-    "    \n",
-    "    'DecisionTreeClassifier': {\n",
-    "        'model': DecisionTreeClassifier(),\n",
-    "        'search space': {\n",
-    "            \n",
-    "            # Hyperparamaters\n",
-    "            'criterion': ['gini', 'entropy', 'log_loss'],\n",
-    "            'splitter': ['best', 'random'],\n",
-    "            'max_features' : [None, 'sqrt', 'log2'],\n",
-    "        }\n",
-    "    },\n",
-    "    \n",
-    "    'RandomForestClassifier': {\n",
-    "        'model': RandomForestClassifier(),\n",
-    "        'search space': {\n",
-    "            \n",
-    "            # Hyperparamaters\n",
-    "            'n_estimators': [x for x in range(10, 110, 10)],\n",
-    "            \n",
-    "            'criterion': ['gini', 'entropy', 'log_loss'],\n",
-    "            'max_features' : [None, 'sqrt', 'log2']\n",
-    "        }\n",
-    "    },\n",
-    "}"
+    "<img src=\"hell.png\" alt=\"Alternative text\"/>"
    ]
   },
   {
@@ -1670,36 +1666,35 @@
     }
    ],
    "source": [
-    "#import warnings\n",
-    "#warnings.filterwarnings('ignore')\n",
+    "models = [] \n",
     "\n",
+    "# Loop through all datasets\n",
     "for dataset_name, dataset in datasets.items():\n",
     "    \n",
     "    # Loop through and use the minmax and standard scaler\n",
     "    for scaler_name in ['minmax', 'standard']:\n",
     "        \n",
-    "        # Scale the data\n",
     "        scaled_x_train, scaled_x_val = Helper.scaler(scaler_name, dataset['x_train'], dataset['x_val'])\n",
     "\n",
-    "        # loop through all models. data = dict with model object and parameter info\n",
+    "        # loop through all models\n",
     "        for model_name, data in model_data.items():\n",
     "            \n",
-    "            # Search # find the best hyperparamters\n",
+    "            # Search and find the best hyperparamters\n",
     "            GS = GridSearchCV(\n",
     "                estimator = data['model'],\n",
     "                param_grid = data['search space'],\n",
     "                scoring = 'accuracy',\n",
-    "                #n_jobs=2, # add when running final\n",
+    "                n_jobs=2,\n",
     "                cv = 5,\n",
-    "                verbose = 3 # remove when running final\n",
     "            )\n",
     "            \n",
-    "            GS.fit(scaled_x_train, dataset['y_train'])\n",
+    "            models.append(GS.fit(scaled_x_train, dataset['y_train']))\n",
     "            \n",
     "            val_pred = GS.predict(scaled_x_val)\n",
+    "\n",
+    "            score = accuracy_score(y_true=dataset['y_val'], y_pred=val_pred)\n",
     "            \n",
-    "            score = accuracy_score(dataset['y_val'], val_pred)\n",
-    "            \n",
+    "            # Add data to dataframe\n",
     "            model_metrics.loc[len(model_metrics.index)] = [\n",
     "                dataset_name,\n",
     "                scaler_name,\n",
@@ -1880,8 +1875,7 @@
    ],
    "source": [
     "model_metrics = model_metrics.sort_values(by=['Accuracy'], ascending=False)\n",
-    "model_metrics\n",
-    "\n"
+    "model_metrics"
    ]
   },
   {
@@ -1889,7 +1883,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Based on the results, i'll be chosing [INSERT] dataset and [INSERT] model & parameters. "
+    "##### Based on the results, it appears that the [INSERT] model ran on the [INSERT] dataset gave the best accuracy. "
    ]
   },
   {
@@ -2024,6 +2018,46 @@
     "# print(classification_report(df1_y_test, y_pred))\n",
     "# cm = confusion_matrix(df1_y_test, y_pred)\n",
     "# ConfusionMatrixDisplay(cm).plot();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 2 2 2]\n",
+      "[1 1 1 2 2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.ensemble import RandomForestClassifier, VotingClassifier\n",
+    "\n",
+    "\n",
+    "clf1 = LogisticRegression(multi_class='multinomial', random_state=1)\n",
+    "clf2 = RandomForestClassifier(n_estimators=50, random_state=1)\n",
+    "clf3 = GaussianNB()\n",
+    "\n",
+    "X = np.array([[-1, -1], [-2, -1], [-3, -2], [1, 1], [2, 1], [3, 2]])\n",
+    "y = np.array([1, 1, 1, 2, 2, 2])\n",
+    "\n",
+    "eclf1 = VotingClassifier(estimators=[('lr', clf1), ('rf', clf2), ('gnb', clf3)], voting='hard')\n",
+    "eclf1 = eclf1.fit(X, y)\n",
+    "\n",
+    "print(eclf1.predict(X))\n",
+    "\n",
+    "# np.array_equal(eclf1.named_estimators_.lr.predict(X), eclf1.named_estimators_['lr'].predict(X))\n",
+    "\n",
+    "# eclf2 = VotingClassifier(estimators=[('lr', clf1), ('rf', clf2), ('gnb', clf3)], voting='soft')\n",
+    "# eclf2 = eclf2.fit(X, y)\n",
+    "# print(eclf2.predict(X))"
    ]
   }
  ],
