--- a/Lab/Lab part 1.ipynb
+++ b/Lab/Lab part 1.ipynb
@@ -10,12 +10,11 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "sns.set_theme()\n",
     "\n",
     "from scipy.sparse import csr_matrix\n",
     "from fuzzywuzzy import process\n",
-    "from sklearn.neighbors import NearestNeighbors\n",
-    "\n",
-    "sns.set_theme()"
+    "from sklearn.neighbors import NearestNeighbors"
    ]
   },
   {
@@ -41,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### a)"
+    "#### a)"
    ]
   },
   {
@@ -535,7 +534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Note: more plots coming after part f)"
+    "###### Note: more plots coming at the end of the EDA"
    ]
   },
   {
@@ -543,7 +542,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### b)"
+    "#### b)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Pretty expected tbh. Some great movies."
    ]
   },
   {
@@ -681,9 +688,9 @@
     "\n",
     "top_10_ratings_movieId = ratings_per_movie.index[:10]\n",
     "\n",
-    "# Manually pull out single movies (e.g dataframes with one row) in order maintain the correct order as\n",
-    "# no indicators exist for how to sort the list. Explicitly not using isin() because it returns a dataframe\n",
-    "# thats already sorted by index. I spent wayyy to long on this...\n",
+    "# Manually pull out single movies (in dataframes with one row format) in order maintain the correct order as\n",
+    "# there are no other indicators for sorting the list. I'm explicitly not using isin() because it returns a dataframe\n",
+    "# thats already sorted by index, thereby not allowing us to sort it outselves. I spent wayyy too long on this...\n",
     "top_10_most_rated = [movies_df.loc[movies_df['movieId'] == i] for i in top_10_ratings_movieId]\n",
     "\n",
     "# conCatenate all the individual dataframes into one. Meow!\n",
@@ -697,15 +704,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Pretty expected tbh. Some great movies in the top 10"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### c)"
+    "#### c)"
    ]
   },
   {
@@ -847,6 +846,7 @@
     }
    ],
    "source": [
+    "# Group by movieId and take the mean of the ratings per Id\n",
     "avr_ratings = ratings_df.groupby('movieId')['rating'].mean()\n",
     "\n",
     "# Use the top_10_ratings_movieId to get the avr ratings for the top 10 movies\n",
@@ -859,7 +859,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### d)"
+    "#### d)"
    ]
   },
   {
@@ -896,7 +896,11 @@
     "# Get the movies per year\n",
     "movies_per_year = movies_df.groupby('year').size()\n",
     "\n",
-    "ax = sns.lineplot(x=movies_per_year.index, y=movies_per_year.values)\n",
+    "ax = sns.lineplot(\n",
+    "    x=movies_per_year.index,\n",
+    "    y=movies_per_year.values\n",
+    ")\n",
+    "\n",
     "ax.set_title(\"movies per year\");"
    ]
   },
@@ -926,7 +930,11 @@
     }
    ],
    "source": [
-    "ax = sns.lineplot(x=movies_per_year.index, y=movies_per_year.values)\n",
+    "ax = sns.lineplot(\n",
+    "    x=movies_per_year.index,\n",
+    "    y=movies_per_year.values\n",
+    ")\n",
+    "\n",
     "ax.set_title(\"movies per year\");\n",
     "plt.xlim(2000, 2020)\n",
     "plt.show()"
@@ -937,7 +945,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### e)"
+    "#### e)"
    ]
   },
   {
@@ -945,7 +953,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Again, more unexpected stuff. What could've possibly caused that gap? And how come the earlier movieId's have as many ratings?"
+    "##### Again, more unexpected stuff. What could've possibly caused that gap? And how come the earlier movieId's have so many ratings?"
    ]
   },
   {
@@ -965,7 +973,11 @@
     }
    ],
    "source": [
-    "ax = sns.lineplot(x=ratings_per_movie.index, y=ratings_per_movie);\n",
+    "ax = sns.lineplot(\n",
+    "    x=ratings_per_movie.index,\n",
+    "    y=ratings_per_movie\n",
+    ");\n",
+    "\n",
     "ax.set_title(\"ratings per movieId\");"
    ]
   },
