--- a/Lab/Lab part 1.ipynb
+++ b/Lab/Lab part 1.ipynb
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1440,21 +1440,28 @@
       "1173    Raiders of the Lost Ark (Indiana Jones and the...\n",
       "1052           Willy Wonka & the Chocolate Factory (1971)\n",
       "587                      Silence of the Lambs, The (1991)\n",
-      "Name: title, dtype: object\n"
+      "Name: title, dtype: object\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "def recommender(movie_name, data,model, n_recommendations ):\n",
-    "    model.fit(data)\n",
+    "def recommender(movie_name, n_recommendations):\n",
+    "    # Get the index\n",
     "    idx=process.extractOne(movie_name, movies_df['title'])[2]\n",
-    "    print('Movie Selected: ',movies_df['title'][idx], 'Index: ',idx)\n",
+    "    \n",
+    "    print('Movie Selected: ',movies_df['title'][idx])\n",
     "    print('Searching for recommendations.....')\n",
-    "    distances, indices=model.kneighbors(data[idx], n_neighbors=n_recommendations)\n",
+    "    \n",
+    "    # Run k nearest neighbors algorithm\n",
+    "    distances, indices=knn_model.kneighbors(ratings_movies_matrix[idx], n_neighbors=n_recommendations)\n",
+    "    \n",
+    "    # Loop through and display top recommendations\n",
     "    for i in indices:\n",
     "        print(movies_df['title'][i].where(i!=idx))\n",
-    "    \n",
-    "recommender('Toy Story', mat_movies_users, knn_model,20)\n"
+    "\n",
+    "\n",
+    "recommender('Toy Story', 20)"
    ]
   }
  ],
