--- a/Lab/Lab part 2 (2.4 - Välja modell... etc.).ipynb
+++ b/Lab/Lab part 2 (2.4 - Välja modell... etc.).ipynb
@@ -301,7 +301,7 @@
     "* decision tree\n",
     "* random forest\n",
     "\n",
-    "The reason for choosing the above models is quite simple. The problem where trying to solve is that of classification. That immediately limited the options for which models we could use. We can for example not use (multiple) linear regression, given that such a model wouldn't be able to do classification (e.g give 1's & 0's for if the patient has cardiovascular disease or not).\n",
+    "The reason for choosing the above models is quite simple. The problem where trying to solve is that of classification. That immediately limits the options for which models we could use. We can for example not use (multiple) linear regression, given that such a model wouldn't be able to do classification (e.g give 1's & 0's for if the patient has cardiovascular disease or not).\n",
     "\n",
     "As for why i decided to use logistic regression, decision tree.. etc. over something like SVM or KNN all comes down to the datasets. The data simply looked to be more suited towards something like a decision tree given how categorical it was. Now where obviously using two datasets that are quite different, but i still figured that an algorithm like logistic regression was up for the task. Especially given that it uses a continuous S-curve for classifying."
    ]
@@ -488,7 +488,6 @@
    ],
    "source": [
     "# split data into a train val test split.\n",
-    "\n",
     "df1_x_train, df1_x_val, df1_x_test, df1_y_train, df1_y_val, df1_y_test = Helper.train_val_test_split(df1_x, df1_y, split_size=0.2, rand_state=42)\n",
     "df2_x_train, df2_x_val, df2_x_test, df2_y_train, df2_y_val, df2_y_test = Helper.train_val_test_split(df2_x, df2_y, split_size=0.2, rand_state=42)\n",
     "\n",
@@ -503,7 +502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Before we continue, i'd like to go over why we even scale the data and do hyperparameter tuning in the first place. There are several reasons for why you'd like to scale the data. In the case of normalization, we'd like to make sure that the weight/importance thats put on various metrics is proprtionally correct. We do this by transforming the data to only contain values between 0 and 1. Standardization on the other hand is useful when the data you've got is known to follow a standard distrubution. Standardization thus involves transforming the data into a standard normal distribution.<br><br>Hyperparameter tuning is a different beast all togeather. Here we tune the various parameters that a model has to offer. Things like the maximum number of interations before the model converges, or the maximum depth of a tree given by the decision tree classifier.<br> Now than, lets continue."
+    "##### Before we continue, I'd like to go over why we even scale the data and do hyperparameter tuning in the first place. There are several reasons for why you'd like to scale the data. In the case of normalization, we'd like to make sure that the weight/importance thats put on various metrics is proportionally correct. We do this by transforming the data to only contain values between 0 and 1. Standardization on the other hand is useful when the data you've got is known to follow a standard distrubution. Standardization thus involves transforming the data into a standard normal distribution.<br><br>Hyperparameter tuning is a different beast all together. Here we tune the various parameters that a model has to offer. Things like the maximum number of iterations before the model converges, or the maximum depth of a tree as given by the decision tree classifier.<br> Now than, lets continue."
    ]
   },
   {
@@ -513,7 +512,6 @@
    "source": [
     "### All parameters and corresponding explanations as to why i made the choices i made.\n",
     "###### NOTE: Obvious choices lack a reason\n",
-    "\n",
     "\n",
     "\n",
     "#### Grid Search parameters\n",
@@ -535,7 +533,7 @@
     "- Hyperparameters\n",
     "\n",
     "    - l1_ratio: [0.0, 0.05, ... 1.0]\n",
-    "        - Reason: Uses both solvers independently as well as in ratios with an increment resolution of 5%. This simply just seems like a resonable thing to do.\n",
+    "        - Reason: Uses both solvers independently as well as in ratios with an increment resolution of 5%. This simply just seems like a reasonable thing to do.\n",
     "    \n",
     "#### DecisionTreeClassifier\n",
     "- Chosen parameters\n",
@@ -581,7 +579,7 @@
     "\n",
     "- Hyperparameters\n",
     "    - n_estimators: [10, 20, ... 100]\n",
-    "        - Reason: Seemed like a resonable range. Random forest doesn't \"slow down\" unlike some other algorithms, and eventually stabalizes, meaning you you won't gain anything by adding more trees. Our dataset also isnt particularly large or complex.\n",
+    "        - Reason: Seemed like a reasonable range. Random forest doesn't \"slow down\" unlike some other algorithms, and eventually stabilizes, meaning you you won't gain anything by adding more trees. Our dataset also isnt particularly large or complex.\n",
     "    \n",
     "    - criterion ['gini', 'entropy', 'log_loss']\n",
     "    - max_features: [None, 'sqrt', 'log2']\n",
@@ -717,7 +715,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### The below code roughly follows this control flow.\n",
+    "##### Rough loop control flow diagram\n",
     "\n",
     "<img src=\"hell.png\" alt=\"Alternative text\"/>"
    ]
@@ -1299,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
